sonar/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-jenkins
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: jenkins.k8s.izaitsava.playpit.by
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins-service
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-sonar
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sonar.k8s.izaitsava.playpit.by
      http:
        paths:
          - path: /
            backend:
              serviceName: sonarqube-service
              servicePort: 80
